[gd_scene load_steps=9 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://ZonaNoTocable.tscn" type="PackedScene" id=3]
[ext_resource path="res://ZonaTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://HadamardPowUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 0.652695, -1.26241, 0, 0, 0, 0, 721.399, -0.731827, 0, 0, 0, 0, 722.797, 1280.06, 0, 0, 0, 0, 2.79718, 1280.06, 0, 0, 0, 0, 0.652695, -1.26241 )
}

[node name="Main" type="Node"]

script/script = ExtResource( 1 )
Coin = ExtResource( 2 )
ZonaNoTocable = ExtResource( 3 )
ZonaTriggerFP = ExtResource( 4 )

[node name="CoinTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="HadPowUpTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="GameEndingTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CoinsInMenuTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CoinsInHMenuTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = false

[node name="CoinsInCreditsTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.2
one_shot = false
autostart = false

[node name="EndlessModeStartTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimeScoreTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="EndlessLevelAdvanceTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[node name="ColorChangerTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="CoinPath" type="Path2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -2, 0 )
curve = SubResource( 1 )

[node name="CoinSpawnLocation" type="PathFollow2D" parent="CoinPath"]

transform/pos = Vector2( 0.652695, -1.26241 )
transform/rot = -0.0421791
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="HadamardPowUp" parent="." instance=ExtResource( 6 )]

visibility/visible = false
transform/pos = Vector2( 0.180481, -297.871 )

[node name="MainMenu" parent="." instance=ExtResource( 7 )]

[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="timeout" from="HadPowUpTimer" to="." method="_on_HadPowUpTimer_timeout"]

[connection signal="timeout" from="GameEndingTimer" to="." method="_on_GameEndingTimer_timeout"]

[connection signal="timeout" from="CoinsInMenuTimer" to="." method="_on_CoinsInMenuTimer_timeout"]

[connection signal="timeout" from="CoinsInHMenuTimer" to="." method="_on_CoinsInHMenuTimer_timeout"]

[connection signal="timeout" from="CoinsInCreditsTimer" to="." method="coin_spawn_in_credits"]

[connection signal="timeout" from="EndlessModeStartTimer" to="." method="_on_EndlessModeStartTimer_timeout"]

[connection signal="timeout" from="TimeScoreTimer" to="." method="_on_TimeScoreTimer_timeout"]

[connection signal="timeout" from="EndlessLevelAdvanceTimer" to="." method="_on_EndlessLevelAdvanceTimer_timeout"]

[connection signal="timeout" from="ColorChangerTimer" to="." method="_on_ColorChangerTimer_timeout"]

[connection signal="back_to_level_select_menu" from="HUD" to="." method="_on_HUD_back_to_level_select_menu"]

[connection signal="back_to_main_menu" from="HUD" to="." method="_on_HUD_back_to_main_menu"]

[connection signal="next_level" from="HUD" to="." method="_on_HUD_next_level"]

[connection signal="start_game" from="HUD" to="." method="new_game"]

[connection signal="start_game_endless" from="HUD" to="." method="new_game_endless"]

[connection signal="stop_game" from="HUD" to="." method="_on_HUD_stop_game"]

[connection signal="stop_game_endless" from="HUD" to="." method="_on_HUD_stop_game_endless"]

[connection signal="HadPowUP_on" from="HadamardPowUp" to="." method="activateHadPU"]

[connection signal="change_help_tip" from="MainMenu" to="." method="_on_MainMenu_change_help_tip"]

[connection signal="level_selected" from="MainMenu" to="." method="_on_MainMenu_level_selected"]

[connection signal="to_credits" from="MainMenu" to="." method="coins_spawn_in_credits"]

[connection signal="to_endless_mode" from="MainMenu" to="." method="prep_endless_mode"]

[connection signal="to_help" from="MainMenu" to="." method="coins_spawn_in_Help_Menu"]

[connection signal="to_level_select" from="MainMenu" to="." method="stop_coin_spawn_in_menu"]

[connection signal="to_main_menu" from="MainMenu" to="." method="coins_spawn_in_main_menu"]

[connection signal="to_main_menu" from="MainMenu" to="." method="stop_coin_spawn_in_Help_Menu"]

[connection signal="to_main_menu" from="MainMenu" to="." method="stop_coin_spawn_in_Credits"]


